syntax = "proto3";
package irishub.guardian;

import "gogoproto/gogo.proto";
import "irishub/guardian/guardian.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/irisnet/irishub/v2/modules/guardian/types";

// Query creates service with guardian as RPC
service Query {
    // Supers returns all Supers
    rpc Supers(QuerySupersRequest) returns (QuerySupersResponse) {
        option (google.api.http).get = "/irishub/guardian/supers";
    }
}

// QuerySupersRequest is request type for the Query/Supers RPC method
message QuerySupersRequest {
    // pagination defines an optional pagination for the request
    cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QuerySupersResponse is response type for the Query/Supers RPC method
message QuerySupersResponse {
    repeated Super supers = 1 [ (gogoproto.nullable) = false ];

    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}